--- a/README.org
+++ b/README.org
@@ -237,3 +237,48 @@
          ;; ...
 ))
    #+end_src
+
+   On part 2, there are 3 possibilities for each of 5-segments and 6-segments.
+   To deduce the correct number, we have minus the set difference between the current string  and one of 1, 7, 4, 8 (which have the corresponding length of 2, 3, 4, 7).
+
+   #+begin_src
+0:      1:      2:      3:      4:
+ aaaa    ....    aaaa    aaaa    ....
+b    c  .    c  .    c  .    c  b    c
+b    c  .    c  .    c  .    c  b    c
+ ....    ....    dddd    dddd    dddd
+e    f  .    f  e    .  .    f  .    f
+e    f  .    f  e    .  .    f  .    f
+ gggg    ....    gggg    gggg    ....
+
+  5:      6:      7:      8:      9:
+ aaaa    aaaa    aaaa    aaaa    aaaa
+b    .  b    .  .    c  b    c  b    c
+b    .  b    .  .    c  b    c  b    c
+ dddd    dddd    ....    dddd    dddd
+.    f  e    f  .    f  e    f  .    f
+.    f  e    f  .    f  e    f  .    f
+ gggg    gggg    ....    gggg    gggg
+   #+end_src
+
+   *First, we have to deduce 1, 7, 4, 8.*
+
+   1. How to deduce 0, 6, 9 from the strings which have the same lengths of 6?
+      Minus 1-string:
+      + Length 5: 6
+      + Length 4: 0 or 9. Minus 4-string:
+        + Length 3: 0
+        + Length 2: 9
+   2. How to deduce 2, 3, 5  from the strings which have the same lengths of 5?
+      Minus 1-string:
+      + Length 3: 3
+      + Length 4: 2 or 5. Minus 4-string:
+        + Length 3: 2
+        + Length 2: 5
+
+   Some lessons learned from Clojure:
+   1. ~zipmap~ returns a map, so the order would be different.
+   2. Equivalence to ~zip~ (in ~Python~) is:
+   #+begin_src clojure
+(map vector patterns outputs)
+   #+end_src
